# od-matrix-completion

./: .gitignore  LICENSE  README.md  example.py  example_beckmann.py  pyproject.toml
notebooks/: main1.ipynb  main2.ipynb  notebook1.ipynb
notes/: Восстановление OD-матриц.md
src/od_matrix_completion/core/: __init__.py  base_algo.py  dto.py  problem.py  prox_kl_algo.py  subfunctions.py  subgradient_algo.py  temp1.py  temp2.py
src/od_matrix_completion/core/models/: __init__.py  beckmann_model.py  beckmann_solver.py  linear_model.py
